--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.4.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
