--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caits-blog_2021",
+  "name": "Update_With_Cait",
   "version": "2.0.0",
   "description": "Caits major blog update",
   "main": "server.js",
