--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "Update With Cait",
   "version": "0.2.0",
   "private": true,
   "proxy": "http://localhost:8000",
