added styling to the new sub email... need to move everything to production and get images from servers

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Update_With_Cait",
+  "name": "uwc",
   "version": "2.0.0",
   "description": "Caits major blog update",
   "main": "server.js",
